--- a/index.html
+++ b/index.html
@@ -1,93 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Theologize Podcast</title>
-    <link rel="stylesheet" href="css/styles.css"/>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,900;1,900&family=Montserrat&family=Sacramento&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <body>
-    <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
-      <h1>Theologize Podcast</h1>
-      <p><h2>The theology,<span class="science"> science</span>, philosophy podcast.</h2></p>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
-      <img src="images/mountain.png" alt="mountain-img" />
+  <title>Theologize Podcast</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,900;1,900&family=Montserrat&family=Sacramento&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
+    <h1>Theologize Podcast</h1>
+    <p>
+    <h2>The theology,<span class="science"> science</span>, philosophy podcast.</h2>
+    </p>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
+    <img src="images/mountain.png" alt="mountain-img" />
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <div class="profile-pic">
+        <img class="avatar-img" src="images/AvatarMaker-removebg-preview.png" alt="" />
+      </div>
+      <h2>Hello!</h2>
+      <p class="intro">
+        Hello my name is David! I am the host of the podcast Theologize
+        podcast. My passion is to shed light on different theological issues.
+        I hope that through this podcast
+        and your support we can build a better world and worldview of God and the things
+        we come into contact with
+        on a daily basis!
+      </p>
     </div>
-    <div class="middle-container">
-      <div class="profile">
-        <div class="profile-pic">
-            <img
-            class="avatar-img"
-            src="images/AvatarMaker-removebg-preview.png"
-            alt=""
-          />
-        </div>
-        <h2>Hello!</h2>
-        <p class="intro">
-          Hello my name is David! I am the host of the podcast Theologize
-          podcast. My passion is to shed light on different theological issues. 
-          I hope that through this podcast
-          and your support we can build a better world and worldview of God and the things 
-          we come into contact with 
-          on a daily basis!
+    <hr />
+    <div class="skills">
+      <h2>Podcast</h2>
+      <div class="skill-row">
+        <img class="code-img" src="images/microphone.png" alt="" />
+        <h3 class="p1">Podcast Mission</h3>
+        <p class="podcast-skill-description">
+          Do you ever feel like you have questions that just don't seemed
+          to be answered in sermons or Bible study groups?
+          This podcast aims at answering and discussing the tough questions you
+          may be pondering through discussion
+          format!
         </p>
       </div>
-      <hr />
-      <div class="skills">
-        <h2>Podcast</h2>
-        <div class="skill-row">
-          <img class="code-img" src="images/microphone.png" alt="" />
-          <h3 class="p1">Podcast Mission</h3>
-          <p class="podcast-skill-description">
-            Do you ever feel like you have questions that just don't seemed 
-            to be answered in sermons or Bible study groups?
-            This podcast aims at answering and discussing the tough questions you 
-            may be pondering through discussion
-            format!
-          </p>
-        </div>
-        <div class="skill-row">
-          <img class="podcast-img" src="images/podcast.png" alt="" />
-          <h3 class="p2"><a href="https://anchor.fm/theologize">Podcast Episodes</a></h3>
-          <p>
-            Our episodes range from morals to sexual abuse in the church to God and social media. Whatever
-            your questions are I am sure we will cover it. If we don't feel free to hit the links at the bottom 
-            with questions you may have! Link for the episodes above.
-          </p>
-        </div>
-      </div>
-      <hr />
-      <div class="contact-me">
-        <h2>Get In Touch</h2>
-        <h3 class="contact-me">Feel free to contact me with questions or ideas! Your support
-            is greatly appreciated!
-        </h3>
-        <p class="closing-statement">
-          If the mission of this podcast inspires you your support would be greatly appreciated and greatly used
-          to further the taboo discussions and answer question. If you would like to contact me with podcast requests, 
-          guest appearances or more hit the contact button!
+      <div class="skill-row">
+        <img class="podcast-img" src="images/podcast.png" alt="" />
+        <h3 class="p2"><a href="https://anchor.fm/theologize">Podcast Episodes</a></h3>
+        <p>
+          Our episodes range from morals to sexual abuse in the church to God and social media. Whatever
+          your questions are I am sure we will cover it. If we don't feel free to hit the links at the bottom
+          with questions you may have! Link for the episodes above.
         </p>
-        <a class="btn" href="mailto:dhromyk@gmail.com">CONTACT ME</a>
-        <a href="https://anchor.fm/theologize/support" class="btn-support">SUPPORT</a>
       </div>
     </div>
+    <hr />
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3 class="contact-me">Feel free to contact me with questions or ideas! Your support
+        is greatly appreciated!
+      </h3>
+      <p class="closing-statement">
+        If the mission of this podcast inspires you your support would be greatly appreciated and greatly used
+        to further the taboo discussions and answer question. If you would like to contact me with podcast requests,
+        guest appearances or more hit the contact button!
+      </p>
+      <div class="container">
 
-    <div class="bottom-container">
-      <a class="footer-link" href="https://anchor.fm/theologize">Podcast</a>
-      <a class="footer-link" href="https://www.youtube.com/channel/UC4_MZbZ1iY7xwuIctyinCag">Youtube</a>
-      <a class="footer-link" href="https://www.instagram.com/theologizepodcast/">Instagram</a>
-      <p>© 2021 David Hromyk.</p>
+      </div>
+      <div class="container-fluid">
+        <div class="row d-flex justify-content-center">
+          <div class="col-lg-12 col-md-6 col-sm-3 text-center">
+            <a href="https://anchor.fm/theologize/support"><button type="button" class="btn btn-primary mr-5">SUPPORT</button></a>
+            <button type="button" class="btn btn-warning">CONTACT ME</button>
+          </div>
+        </div>
+      </div>
     </div>
-  </body>
+  </div>
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://anchor.fm/theologize">Podcast</a>
+    <a class="footer-link" href="https://www.youtube.com/channel/UC4_MZbZ1iY7xwuIctyinCag">Youtube</a>
+    <a class="footer-link" href="https://www.instagram.com/theologizepodcast/">Instagram</a>
+    <p>© 2021 David Hromyk.</p>
+  </div>
+</body>
+
 </html>
