--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
       <div class="container-fluid">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-12 col-md-6 col-sm-3 text-center">
-            <a href="https://anchor.fm/theologize/support"><button type="button" class="btn btn-primary mr-5">SUPPORT</button></a>
-            <button type="button" class="btn btn-warning">CONTACT ME</button>
+            <a href="https://anchor.fm/theologize/support"><button type="button" class="btn btn-primary mr-5 mb-2">SUPPORT</button></a>
+            <button type="button" class="btn btn-warning mr-5 mb-2">CONTACT ME</button>
           </div>
         </div>
       </div>
