--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img" class="img-fluid" />
     <h1>Theologize Podcast</h1>
     <p>
     <h2>The theology,<span class="science"> science</span>, philosophy podcast.</h2>
     </p>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" />
-    <img src="images/mountain.png" alt="mountain-img" />
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" class="img-fluid" />
+    <img src="images/mountain.png" alt="mountain-img" class="img-fluid" />
   </div>
   <div class="middle-container">
     <div class="profile">
       <div class="profile-pic">
-        <img class="avatar-img" src="images/AvatarMaker-removebg-preview.png" alt="" />
+        <img class="avatar-img" src="images/AvatarMaker-removebg-preview.png" alt="" class="img-fluid float-left"/>
       </div>
       <h2>Hello!</h2>
       <p class="intro">
@@ -47,7 +47,7 @@
     <div class="skills">
       <h2>Podcast</h2>
       <div class="skill-row">
-        <img class="code-img" src="images/microphone.png" alt="" />
+        <img class="code-img" src="images/microphone.png" alt="" class="img-fluid">
         <h3 class="p1">Podcast Mission</h3>
         <p class="podcast-skill-description">
           Do you ever feel like you have questions that just don't seemed
@@ -58,8 +58,8 @@
         </p>
       </div>
       <div class="skill-row">
-        <img class="podcast-img" src="images/podcast.png" alt="" />
-        <h3 class="p2"><a href="https://anchor.fm/theologize">Podcast Episodes</a></h3>
+        <img class="podcast-img" src="images/podcast.png" alt="">
+        <h3  class="p2"><a href="https://anchor.fm/theologize">Episodes</a></h3>
         <p>
           Our episodes range from morals to sexual abuse in the church to God and social media. Whatever
           your questions are I am sure we will cover it. If we don't feel free to hit the links at the bottom
@@ -68,28 +68,29 @@
       </div>
     </div>
     <hr />
-    <div class="contact-me">
+    <div class="text-center mb-5" class="contact-me">
       <h2>Get In Touch</h2>
-      <h3 class="contact-me">Feel free to contact me with questions or ideas! Your support
+      <h3 class="text-center mt-5" class="contact-me">Feel free to contact me with questions or ideas! Your support
         is greatly appreciated!
       </h3>
-      <p class="closing-statement">
-        If the mission of this podcast inspires you your support would be greatly appreciated and greatly used
-        to further the taboo discussions and answer question. If you would like to contact me with podcast requests,
-        guest appearances or more hit the contact button!
-      </p>
-      <div class="container">
 
-      </div>
-      <div class="container-fluid">
-        <div class="row d-flex justify-content-center">
-          <div class="col-lg-12 col-md-6 col-sm-3 text-center">
-            <a href="https://anchor.fm/theologize/support"><button type="button" class="btn btn-primary mr-5 mb-2">SUPPORT</button></a>
-            <button type="button" class="btn btn-warning mr-5 mb-2">CONTACT ME</button>
-          </div>
-        </div>
+        <p class="text-center" class="closing-statement">
+          If the mission of this podcast inspires you your support would be greatly appreciated and greatly used
+          to further the taboo discussions and answer question. If you would like to contact me with podcast requests,
+          guest appearances or more hit the contact button!
+        </p>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row d-flex justify-content-center">
+      <div class="col-lg-12 text-center">
+        <a href="https://anchor.fm/theologize/support"><button type="button"
+            class="btn btn-primary mr-4">SUPPORT</button></a>
+        <button type="button" class="btn btn-warning ml-4">CONTACT ME</button>
       </div>
     </div>
+  </div>
+  </div>
   </div>
 
   <div class="bottom-container">
