--- a/index.html
+++ b/index.html
@@ -16,81 +16,103 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,900;1,900&family=Montserrat&family=Sacramento&display=swap"
     rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/247fb1a6e5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img" class="img-fluid" />
-    <h1>Theologize Podcast</h1>
-    <p>
-    <h2>The theology,<span class="science"> science</span>, philosophy podcast.</h2>
-    </p>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img" class="img-fluid" />
-    <img src="images/mountain.png" alt="mountain-img" class="img-fluid" />
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12 upper-portion">
+        <div class="top-container">
+          <img class="img-fluid top-cloud" src="images/cloud.png" alt="cloud-img" />
+          <h1>Theologize Podcast</h1>
+          <p>
+          <h2>The theology,<span class="science"> science</span>, philosophy podcast.</h2>
+          </p>
+          <div class="col-lg-6 col-md-6 col-sm-6">
+            <img class="img-fluid bottom-cloud" src="images/cloud.png" alt="cloud-img" />
+          </div>
+          <img src="images/mountain.png" alt="mountain-img" class="img-fluid" />
+        </div>
+      </div>
+    </div>
+  </div>
   </div>
   <div class="middle-container">
     <div class="profile">
-      <div class="profile-pic">
-        <img class="avatar-img" src="images/AvatarMaker-removebg-preview.png" alt="" class="img-fluid float-left"/>
-      </div>
-      <h2>Hello!</h2>
-      <p class="intro">
-        Hello my name is David! I am the host of the podcast Theologize
-        podcast. My passion is to shed light on different theological issues.
-        I hope that through this podcast
-        and your support we can build a better world and worldview of God and the things
-        we come into contact with
-        on a daily basis!
-      </p>
-    </div>
-    <hr />
-    <div class="skills">
-      <h2>Podcast</h2>
-      <div class="skill-row">
-        <img class="code-img" src="images/microphone.png" alt="" class="img-fluid">
-        <h3 class="p1">Podcast Mission</h3>
-        <p class="podcast-skill-description">
-          Do you ever feel like you have questions that just don't seemed
-          to be answered in sermons or Bible study groups?
-          This podcast aims at answering and discussing the tough questions you
-          may be pondering through discussion
-          format!
+      <div>
+        <img class="img-fluid profile-pic" src="images/David.jpg" alt="" />
+        <h2>Hello!</h2>
+        <p class="intro">
+          Hello my name is David! I am the host of the podcast Theologize
+          podcast. My passion is to shed light on different theological issues.
+          I hope that through this podcast
+          and your support we can build a better world and worldview of God and the things
+          we come into contact with
+          on a daily basis!
         </p>
       </div>
-      <div class="skill-row">
-        <img class="podcast-img" src="images/podcast.png" alt="">
-        <h3  class="p2"><a href="https://anchor.fm/theologize">Episodes</a></h3>
-        <p>
-          Our episodes range from morals to sexual abuse in the church to God and social media. Whatever
-          your questions are I am sure we will cover it. If we don't feel free to hit the links at the bottom
-          with questions you may have! Link for the episodes above.
-        </p>
+      <hr />
+      <div class="skills">
+        <h2>Podcast</h2>
+        <div class="container-fluid button-class">
+          <div class="row d-flex justify-content-center">
+            <div class="col-lg-6">
+              <a href="https://open.spotify.com/show/0udqnjZblKwHTSF34rjV4a?si=ngdVV8NoSD-Dx9UKNPzQPg"><button
+                  type="button" class="btn btn-dark mr-4"><i class="fab fa-spotify"></i> SPOTIFY</button></a>
+              <button type="button" class="btn btn-lg btn-dark ml-4"><i class="fab fa-apple"></i> APPLE</button>
+
+            </div>
+          </div>
+        </div>
+        <div class="skill-row">
+          <img class="code-img" src="images/microphone.png" alt="" class="img-fluid">
+          <h3 class="p1">Podcast Mission</h3>
+
+          <p class="podcast-skill-description">
+            Do you ever feel like you have questions that just don't seemed
+            to be answered in sermons or Bible study groups?
+            This podcast aims at answering and discussing the tough questions you
+            may be pondering through discussion
+            format!
+          </p>
+        </div>
+        <div class="skill-row">
+          <img class="podcast-img" src="images/podcast.png" alt="">
+          <h3 class="p2"><a href="https://anchor.fm/theologize">Episodes</a></h3>
+          <p>
+            Our episodes range from morals to sexual abuse in the church to God and social media. Whatever
+            your questions are I am sure we will cover it. If we don't feel free to hit the links at the bottom
+            with questions you may have! Link for the episodes above.
+          </p>
+        </div>
       </div>
-    </div>
-    <hr />
-    <div class="text-center mb-5" class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3 class="text-center mt-5" class="contact-me">Feel free to contact me with questions or ideas! Your support
-        is greatly appreciated!
-      </h3>
+      <hr />
+      <div class="text-center mb-5" class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3 class="text-center mt-5" class="contact-me">Feel free to contact me with questions or ideas! Your support
+          is greatly appreciated!
+        </h3>
 
         <p class="text-center" class="closing-statement">
           If the mission of this podcast inspires you your support would be greatly appreciated and greatly used
           to further the taboo discussions and answer question. If you would like to contact me with podcast requests,
           guest appearances or more hit the contact button!
         </p>
-  </div>
+      </div>
 
-  <div class="container-fluid">
-    <div class="row d-flex justify-content-center">
-      <div class="col-lg-12 text-center">
-        <a href="https://anchor.fm/theologize/support"><button type="button"
-            class="btn btn-primary mr-4">SUPPORT</button></a>
-        <button type="button" class="btn btn-warning ml-4">CONTACT ME</button>
+      <div class="container-fluid">
+        <div class="row d-flex justify-content-center">
+          <div class="col-lg-6">
+            <a href="https://anchor.fm/theologize/support"><button type="button" class="btn btn-dark mr-4"><i
+                  class="fas fa-dollar-sign"></i> SUPPORT</button></a>
+            <a href="MAILTO:dhromyk@gmail.com"><button type="button" class="btn btn-dark ml-4"><i
+                  class="fas fa-envelope-square"></i> CONTACT ME</button>
+
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-  </div>
   </div>
 
   <div class="bottom-container">
@@ -99,6 +121,8 @@
     <a class="footer-link" href="https://www.instagram.com/theologizepodcast/">Instagram</a>
     <p>© 2021 David Hromyk.</p>
   </div>
+
+
 </body>
 
 </html>
