--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             <div class="col-lg-6">
               <a href="https://open.spotify.com/show/0udqnjZblKwHTSF34rjV4a?si=ngdVV8NoSD-Dx9UKNPzQPg"><button
                   type="button" class="btn btn-dark mr-4"><i class="fab fa-spotify"></i> SPOTIFY</button></a>
-              <button type="button" class="btn btn-lg btn-dark ml-4"><i class="fab fa-apple"></i> APPLE</button>
+              <a href="https://podcasts.apple.com/us/podcast/theologize/id1534758207"><button type="button"
+                  class="btn btn-lg btn-dark ml-4"><i class="fab fa-apple"></i> APPLE</button>
 
             </div>
           </div>
