Adjust buttons and spacing

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <a href="https://open.spotify.com/show/0udqnjZblKwHTSF34rjV4a?si=ngdVV8NoSD-Dx9UKNPzQPg"><button
                   type="button" class="btn btn-dark mr-4"><i class="fab fa-spotify"></i> SPOTIFY</button></a>
               <a href="https://podcasts.apple.com/us/podcast/theologize/id1534758207"><button type="button"
-                  class="btn btn-lg btn-dark ml-4"><i class="fab fa-apple"></i> APPLE</button>
+                  class="btn btn-lg btn-dark ml-4"><i class="fab fa-apple"></i> APPLE</button></a>
 
             </div>
           </div>
