--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-lg-12">
         <div class="skill-row">
+          <div class="text-center">
           <img class="code-img" src="images/microphone.png" alt="" class="img-fluid">
           <h3 class="p1">Podcast Mission</h3>
 
@@ -78,7 +81,9 @@
             format!
           </p>
         </div>
+        </div>
         <div class="skill-row">
+          
           <img class="podcast-img" src="images/podcast.png" alt="">
           <h3 class="p2"><a href="https://anchor.fm/theologize">Episodes</a></h3>
           <p>
@@ -86,7 +91,10 @@
             your questions are I am sure we will cover it. If we don't feel free to hit the links at the bottom
             with questions you may have! Link for the episodes above.
           </p>
+
         </div>
+        </div>
+      </div>
       </div>
       <hr />
       <div class="text-center mb-5" class="contact-me">
