--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+  <div class="text-center">
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12 upper-portion">
@@ -130,6 +131,7 @@
     <a class="footer-link" href="https://www.instagram.com/theologizepodcast/">Instagram</a>
     <p>© 2021 David Hromyk.</p>
   </div>
+</div>
 
 
 </body>
