--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </div>
   </div>
-  <div class="middle-container">
+  <div class="middle-container text-center">
     <div class="profile">
       <div>
         <img class="img-fluid profile-pic" src="images/David.jpg" alt="" />
@@ -54,7 +54,7 @@
         </p>
       </div>
       <hr />
-      <div class="skills">
+      <div class="skills text-center">
         <h2>Podcast</h2>
         <div class="container-fluid button-class">
           <div class="row d-flex justify-content-center">
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-12 text-center">
         <div class="skill-row">
           <div class="text-center">
           <img class="code-img" src="images/microphone.png" alt="" class="img-fluid">
@@ -126,12 +126,16 @@
   </div>
 
   <div class="bottom-container">
+    <div class="text-center">
     <a class="footer-link" href="https://anchor.fm/theologize">Podcast</a>
     <a class="footer-link" href="https://www.youtube.com/channel/UC4_MZbZ1iY7xwuIctyinCag">Youtube</a>
     <a class="footer-link" href="https://www.instagram.com/theologizepodcast/">Instagram</a>
     <p>© 2021 David Hromyk.</p>
   </div>
 </div>
+</div>
+
+
 
 
 </body>
