--- a/index.html
+++ b/index.html
@@ -21,29 +21,29 @@
 
 <body>
   <div class="text-center">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-12 upper-portion">
-        <div class="top-container">
-          <img class="img-fluid top-cloud" src="images/cloud.png" alt="cloud-img" />
-          <h1>Theologize Podcast</h1>
-          <p>
-          <h2>The theology,<span class="science"> science</span>, philosophy podcast.</h2>
-          </p>
-          <div class="col-lg-6 col-md-6 col-sm-6">
-            <img class="img-fluid bottom-cloud" src="images/cloud.png" alt="cloud-img" />
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12 upper-portion">
+          <div class="top-container">
+            <img class="img-fluid top-cloud" src="images/cloud.png" alt="cloud-img" />
+            <h1>Theologize Podcast</h1>
+            <p>
+            <h2>The theology,<span class="science"> science</span>, philosophy podcast.</h2>
+            </p>
+            <div class="col-lg-6 col-md-6 col-sm-6">
+              <img class="img-fluid bottom-cloud" src="images/cloud.png" alt="cloud-img" />
+            </div>
+            <img src="images/mountain.png" alt="mountain-img" class="img-fluid" />
           </div>
-          <img src="images/mountain.png" alt="mountain-img" class="img-fluid" />
         </div>
       </div>
     </div>
-  </div>
   </div>
   <div class="middle-container text-center">
     <div class="profile">
       <div>
         <img class="img-fluid profile-pic" src="images/David.jpg" alt="" />
-        <h2>Hello!</h2>
+        <h2 class="section-text-color">Hello!</h2>
         <p class="intro">
           Hello my name is David! I am the host of the podcast Theologize
           podcast. My passion is to shed light on different theological issues.
@@ -53,9 +53,9 @@
           on a daily basis!
         </p>
       </div>
-      <hr />
+      <hr class="hr2 padding" />
       <div class="skills text-center">
-        <h2>Podcast</h2>
+        <h2 class="section-text-color">Podcast</h2>
         <div class="container-fluid button-class">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6">
@@ -69,38 +69,39 @@
         </div>
         <div class="row">
           <div class="col-lg-12 text-center">
-        <div class="skill-row">
-          <div class="text-center">
-          <img class="code-img" src="images/microphone.png" alt="" class="img-fluid">
-          <h3 class="p1">Podcast Mission</h3>
+            <div class="skill-row">
+              <div class="text-center">
+                <img class="code-img img-fluid" src="images/microphone.png" alt="">
+                <h3 class="p1 section-text-color">Podcast Mission</h3>
 
-          <p class="podcast-skill-description">
-            Do you ever feel like you have questions that just don't seemed
-            to be answered in sermons or Bible study groups?
-            This podcast aims at answering and discussing the tough questions you
-            may be pondering through discussion
-            format!
-          </p>
-        </div>
-        </div>
-        <div class="skill-row">
-          
-          <img class="podcast-img" src="images/podcast.png" alt="">
-          <h3 class="p2"><a href="https://anchor.fm/theologize">Episodes</a></h3>
-          <p>
-            Our episodes range from morals to sexual abuse in the church to God and social media. Whatever
-            your questions are I am sure we will cover it. If we don't feel free to hit the links at the bottom
-            with questions you may have! Link for the episodes above.
-          </p>
+                <p class="podcast-skill-description">
+                  Do you ever feel like you have questions that just don't seemed
+                  to be answered in sermons or Bible study groups?
+                  This podcast aims at answering and discussing the tough questions you
+                  may be pondering through discussion
+                  format!
+                </p>
+              </div>
+            </div>
+            <div class="skill-row">
 
-        </div>
+              <img class="podcast-img img-fluid" src="images/podcast.png" alt="">
+              <h3 class="p2 section-text-color">Episodes</h3>
+              <p>
+                Our episodes range from morals to sexual abuse in the church to God and social media. Whatever
+                your questions are I am sure we will cover it. If we don't feel free to hit the links at the bottom
+                with questions you may have! Link for the episodes above.
+              </p>
+
+            </div>
+          </div>
         </div>
       </div>
-      </div>
-      <hr />
+      <hr class="hr2" />
       <div class="text-center mb-5" class="contact-me">
-        <h2>Get In Touch</h2>
-        <h3 class="text-center mt-5" class="contact-me">Feel free to contact me with questions or ideas! Your support
+        <h2 class="section-text-color">Get In Touch</h2>
+        <h3 class="text-center mt-5 section-text-color" class="contact-me">Feel free to contact me with questions or
+          ideas! Your support
           is greatly appreciated!
         </h3>
 
@@ -127,17 +128,13 @@
 
   <div class="bottom-container">
     <div class="text-center">
-    <a class="footer-link" href="https://anchor.fm/theologize">Podcast</a>
-    <a class="footer-link" href="https://www.youtube.com/channel/UC4_MZbZ1iY7xwuIctyinCag">Youtube</a>
-    <a class="footer-link" href="https://www.instagram.com/theologizepodcast/">Instagram</a>
-    <p>© 2021 David Hromyk.</p>
+      <a class="footer-link" href="https://anchor.fm/theologize">Podcast</a>
+      <a class="footer-link" href="https://www.youtube.com/channel/UC4_MZbZ1iY7xwuIctyinCag">Youtube</a>
+      <a class="footer-link" href="https://www.instagram.com/theologizepodcast/">Instagram</a>
+      <p class="final-part">© 2021 David Hromyk.</p>
+    </div>
   </div>
-</div>
-</div>
-
-
-
-
+  </div>
 </body>
 
 </html>
